--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <!-- Header -->
 
-    <header>
-        <h1 class="logo">Hammad Qureshi</h1>
+    <header id="home">
+        <h1 class="logo"><a href="#home">Hammad Qureshi</a></h1>
         <nav>
             <ul class="nav">
                 <li><a class="nav" href="#skills">Skills</a></li>
