Bugs fixed & Ordered.
Font size & weights.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <div class="container">
             <h1>Hi, Hammad here.<br/><span>I'm a passionate Front-end web developer.</span></h1>
         </div>
+        <!-- Arrow-down icon -->
         <div class="scrolldown">
             <a href="#skills">
             <span></span>
@@ -77,12 +78,10 @@
         <div class="about-me-container">
                 <div class=about-me-text>
                 Hello, This is Hammad.<br/>
-    I'm from Lahore, Pakistan. I'm (to be) a Front-end Web developer. My major is Computer Science. My current focus is on coding, developing & app deployment. But my dreams are even bigger. Specializing in designing and coding responsive user interfaces with HTML, CSS and Javascript.
+                I'm from Lahore, Pakistan. I'm (to be) a Front-end Web developer. My major is Computer Science. My current focus is on coding, developing & app deployment. But my dreams are even bigger. Specializing in designing and coding responsive user interfaces with HTML, CSS and Javascript.
                 </div>
         </div>
     </section>
-
-    
   
     <!-- Get in touch -->
 
@@ -90,9 +89,9 @@
         <h2 id="contact"><strong>Get in touch</strong></h2>
         <div class="underline-title"></div>
             <!-- Social Buttons -->
-
             <div class="social">
                 <ul>
+
                     <!-- Github -->
                     <li>
                         <a href="https://github.com/hammad-qureshi/" class="icon" target="_blank">
@@ -126,7 +125,7 @@
             <!-- Copyright -->
 
             <div class="copyright">
-                <p>
+                <p class="copy">
                     <hr id="copyright"/>
                     Copyright © 2020. All right reserved.<br/>
                     Made by Hammad Qureshi.
