--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     
     <section class="default">
         <div class="container">
-            <h1>Hi, Hammad here.<br/><span>I'm a passionate Front-end web developer.</span></h1>
+            <h1>Hi, Hammad here.<br/><span>I'm a passionate web developer.</span></h1>
         </div>
         <!-- Arrow-down icon -->
         <div class="scrolldown">
@@ -48,13 +48,14 @@
         <div class="underline-title"></div>
         <div class="skills-container">
             <div class="skills-text">
-                <p><strong>Front-end:</strong> HTML5, CSS6 & JavaScript.</p>
-                <p><strong>Web development:</strong> On Surge via React & Github-actions.</p>
+                <p><strong>Front-end:</strong> HTML5, CSS6, & JavaScript.</p>
+                <p><strong>Back-end:</strong> Python, SQL & PHP.</p>
+                <p><strong>Web development:</strong> Responsive Wordpress development, Cpanel, Surge development via React & Github-actions.</p>
                 <p><strong>Project Management:</strong> Agile development, Design thinking & DevOps.</p>
                 <p><strong>CI/CD:</strong> Github-actions Automation.</p>
-                <p><strong> Version Control:</strong> Git, Github CI & GUI.</p>
+                <p><strong>Version Control:</strong> Git, Github CI & GUI.</p>
                 <p><strong>Cloud Native:</strong> Server site app management & deployment (via Docker & Kubernetes).</p>
-                <p><strong>Other:</strong>  C Language for General-purpose, procedural structed Programming.</p>
+                <p><strong>Other:</strong>  C & C++ for General-purpose, procedural structed Programming.</p>
             </div>
         </div>
     </section>
@@ -78,7 +79,7 @@
         <div class="about-me-container">
                 <div class=about-me-text>
                 Hello, This is Hammad.<br/>
-                I'm from Lahore, Pakistan. I'm (to be) a Front-end Web developer. My major is Computer Science. My current focus is on coding, developing & app deployment. But my dreams are even bigger. Specializing in designing and coding responsive user interfaces with HTML, CSS and Javascript.
+                I'm from Lahore, Pakistan. I'm (to be) a Front-end Web developer, Currently a CTO at <a href="winci.pk">Winci</a>. My major is Computer Science. My current focus is on coding, developing & app deployment. But my dreams are even bigger. Specializing in designing and coding responsive user interfaces & Web Development.
                 </div>
         </div>
     </section>
@@ -101,7 +102,7 @@
 
                     <!-- Instagram -->
                     <li>
-                        <a title="Instagram" href="https://www.instagram.com/hammad._.qureshi/" class="icon" target="_blank">
+                        <a title="Instagram" href="https://www.instagram.com/hammad.ew/" class="icon" target="_blank">
                             <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.3" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg>
                         </a>
                     </li>
@@ -115,7 +116,7 @@
 
                     <!-- Email -->
                     <li>
-                        <a title="Mail me" href="mailto:hqur.69@gmail.com?subject = Feedback&body = Message" class="icon" target="_blank">
+                        <a title="Mail me" href="mailto:hammad@winci.pk?subject = Feedback&body = Message" class="icon" target="_blank">
                             <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.3" stroke-linecap="round" stroke-linejoin="round" class="feather feather-mail"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
                         </a>
                     </li>
@@ -127,7 +128,7 @@
             <div class="copyright">
                 <p class="copy">
                     <hr id="copyright"/>
-                    Copyright © 2020. All right reserved.<br/>
+                    Copyright © 2021. All right reserved.<br/>
                     Made by Hammad Qureshi.
                 </p>
             </div>
