--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     
     <section class="default">
         <div class="container">
-            <h1>Hi, Hammad here.<br/><span>I'm a passionate web developer.</span></h1>
+            <h1>Hi, Hammad here.<br/><span>I'm a passionate Web developer.</span></h1>
         </div>
         <!-- Arrow-down icon -->
         <div class="scrolldown">
