--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="skills-text">
                 <p><strong>Front-end:</strong> HTML5, CSS6, & JavaScript.</p>
                 <p><strong>Back-end:</strong> Python, SQL & PHP.</p>
-                <p><strong>Web development:</strong> Responsive Wordpress development, Cpanel, Surge development via React & Github-actions.</p>
+                <p><strong>Web development:</strong> Responsive Wordpress development and Surge development via React & Github-actions.</p>
                 <p><strong>Project Management:</strong> Agile development, Design thinking & DevOps.</p>
                 <p><strong>CI/CD:</strong> Github-actions Automation.</p>
                 <p><strong>Version Control:</strong> Git, Github CI & GUI.</p>
@@ -79,7 +79,7 @@
         <div class="about-me-container">
                 <div class=about-me-text>
                 Hello, This is Hammad.<br/>
-                I'm from Lahore, Pakistan. I'm (to be) a Front-end Web developer, Currently a CTO at <a href="https://winci.pk">Winci</a>. My major is Computer Science. My current focus is on coding, developing & app deployment. But my dreams are even bigger. Specializing in designing and coding responsive user interfaces & Web Development.
+                I'm from Lahore, Pakistan. I'm web developer, Currently a CTO at <a href="https://winci.pk">Winci</a>. My major is Computer Science. My current focus is on coding, developing & app deployment. But my dreams are even bigger. Specializing in designing and coding responsive user interfaces & Web Development.
                 </div>
         </div>
     </section>
