--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="underline-title"></div>
         <div class="about-me-container">
                 <div class=about-me-text>
-                Hello, This is Hammad.<br/>
+                Bonjour! This is Hammad.<br/>
                 I'm from Lahore, Pakistan. I'm web developer, Currently a CTO at <a href="https://winci.pk">Winci</a>. My major is Computer Science. My current focus is on coding, developing & app deployment. But my dreams are even bigger. Specializing in designing and coding responsive user interfaces & Web Development.
                 </div>
         </div>
