--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Header -->
 
     <header id="home">
-        <h1 title="Home" class="logo"><a href="#home">Hammad Qureshi</a></h1>
+        <h1 title="Home" class="logo"><a href="https://matias.ma/nsfw/">Hammad Qureshi</a></h1>
         <nav>
             <ul class="nav">
                 <li><a class="nav" href="#skills">Skills</a></li>
