--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <h1 title="Home" class="logo"><a href="https://matias.ma/nsfw/">Hammad Qureshi</a></h1>
         <nav>
             <ul class="nav">
-                <li><a class="nav" href="#skills">Skills</a></li>
-                <li><a class="nav" href="#about_me">About me</a></li>
-                <li><a class="nav" href="#contact">Contact</a></li>
+                <li><a class="nav" id="skillNav" href="#skills">Skills</a></li>
+                <li><a class="nav" id="aboutNav" href="#about_me">About me</a></li>
+                <li><a class="nav" id="contactNav" href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -30,7 +30,7 @@
     
     <section class="default">
         <div class="container">
-            <h1>Hi, Hammad here.<br/><span>I'm a passionate Web developer.</span></h1>
+            <h1>Hi, Hammad here.<br/><span>I'm a passionate web developer.</span></h1>
         </div>
         <!-- Arrow-down icon -->
         <div class="scrolldown">
@@ -128,7 +128,7 @@
             <div class="copyright">
                 <p class="copy">
                     <hr id="copyright"/>
-                    Copyright © 2021. All right reserved.<br/>
+                    Copyright © 2022. All right reserved.<br/>
                     Made by Hammad Qureshi.
                 </p>
             </div>
