--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                             <div class="about__box">
                                 <i class='bx bx-award about__icon'></i>
                                 <h3 class="about__title">Experience</h3>
-                                <span class="about subtitle">3+ Years Working</span>
+                                <span class="about subtitle">3+ Years</span>
                             </div>
 
                             <div class="about__box">
@@ -149,7 +149,7 @@
                         </div>
 
                         <p class="about__description">
-                            Bonjour! This is Hammad. <br>I'm doing BS Computer Science. My current focus is on Programming, Cyber Security & Mobile App Development, but my dreams are even bigger, specializing in pursuance for full-stack development.
+                            Bonjour! This is Hammad. <br>I'm doing BS Computer Science. My current focus is on Programming, Cyber Security, Mobile App Development & specializing in pursuance for full-stack development.
                         </p>
 
                         <a href="#contact" class="button">Contact Me</a>
