--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
         <!--=============== HEADER ===============-->
         <header class="header" id="header">
             <nav class="nav container">
-                <!-- <a href="#" class="nav__logo">Hammad</a> -->
-
-                <a href="#" class="nav__logo"><img src="./assets/img/name.png" style="width: 40px;"></a>
+                <a href="#" class="nav__logo">Hammad</a>
 
                 <div class="nav__menu">
                     <ul class="nav__list">
