--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <h3 class="home__education">Software Engineer</h3>
 
                         <div class="home__buttons">
-                            <a download="" href="./assets/pdf/CV.pdf" class="button button--ghost">
+                            <a download="" href="./assets/pdf/Hammad Qureshi - CV.pdf" class="button button--ghost">
                                 Download CV
                             </a>
                             <a href="#about" class="button">About me</a>
@@ -628,9 +628,9 @@
                             <div class="contact__card">
                                 <i class='bx bx-mail-send contact__card-icon' ></i>
                                 <h3 class="contact__card-title">Email</h3>
-                                <span class="contact__card-data">hqur.69@gmail.com</span>
+                                <span class="contact__card-data">email blah blah</span>
 
-                                <a href="mailto:hqur.69@gmail.com" target="_blank" class="contact__button">
+                                <a href="#" target="_blank" class="contact__button">
                                     Write me <i class='bx bx-right-arrow-alt contact__button-icon' ></i>
                                 </a>
                             </div>
@@ -638,9 +638,9 @@
                             <div class="contact__card">
                                 <i class='bx bxl-whatsapp contact__card-icon' ></i>
                                 <h3 class="contact__card-title">WhatsApp</h3>
-                                <span class="contact__card-data">+923234207676</span>
+                                <span class="contact__card-data">number</span>
 
-                                <a href="https://wa.me/+923234207676" target="_blank" class="contact__button">
+                                <a href="#" target="_blank" class="contact__button">
                                     Write me <i class='bx bx-right-arrow-alt contact__button-icon' ></i>
                                 </a>
                             </div>
@@ -648,9 +648,9 @@
                             <div class="contact__card">
                                 <i class='bx bxl-messenger contact__card-icon' ></i>
                                 <h3 class="contact__card-title">Messenger</h3>
-                                <span class="contact__card-data">whut.iz</span>
+                                <span class="contact__card-data">username</span>
 
-                                <a href="https://m.me/whut.iz" target="_blank" class="contact__button">
+                                <a href="#" target="_blank" class="contact__button">
                                     Write me <i class='bx bx-right-arrow-alt contact__button-icon' ></i>
                                 </a>
                             </div>
