--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <h3 class="home__education">Software Engineer</h3>
 
                         <div class="home__buttons">
-                            <a download="" href="./assets/pdf/Hammad Qureshi - CV.pdf" class="button button--ghost">
+                            <a download="" href="./assets/pdf/CV.pdf" class="button button--ghost">
                                 Download CV
                             </a>
                             <a href="#about" class="button">About me</a>
