--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
                             </div>
 
                             <div class="about__box">
-                                <i class='bx bx-support about__icon' ></i>
+                                <i class='bx bx-mail-send about__icon' ></i>
                                 <h3 class="about__title">Support</h3>
-                                <span class="about subtitle">24/7</span>
+                                <span class="about subtitle">Available</span>
                             </div>
                         </div>
 
