updated form submission method
from getform.io to formsubmit.io

--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
                     <div class="contact__content">
                         <h3 class="contact__title">Write me your project</h3>
 
-                        <form action="https://getform.io/f/b5b55136-1bc8-4b28-843f-354dfafef480" class="contact__form" method="post">
+                        <form action="https://formsubmit.io/send/182ee1d9-61b2-4b6c-b84e-0da2b5dc41e1" class="contact__form" method="post">
                             <div class="contact__form-div">
                                 <label for="" class="contact__form-tag">Name</label>
                                 <input type="text" name="name" placeholder="Insert your name" class="contact__form-input" required>
