redirection to submitted.html

--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
                                     <li class="services__modal-item">
                                         <i class='bx bx-check services__modal-icon' ></i>
                                         <p class="services__modal-info">
-                                            Page audits
+                                            Page audits
                                         </p>
                                     </li>
                                     
@@ -661,6 +661,7 @@
                         <h3 class="contact__title">Write me your project</h3>
 
                         <form action="https://formsubmit.io/send/182ee1d9-61b2-4b6c-b84e-0da2b5dc41e1" class="contact__form" method="post">
+                            <input name="_redirect" type="hidden" id="name" value="https://hammadev.vercel.app/submitted.html">
                             <div class="contact__form-div">
                                 <label for="" class="contact__form-tag">Name</label>
                                 <input type="text" name="name" placeholder="Insert your name" class="contact__form-input" required>
