--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <title>Hammad Qureshi</title>
     </head>
 
+    <!--=============== Image Scrapping Block ===============-->
     <script type="text/javascript">
         function nocontext(e) {
             var clickedTag = (e==null) ? event.srcElement.tagName : e.target.tagName;
@@ -30,6 +31,12 @@
         var alertMsg = "Scraping images is disabled for privacy purposes :)";
         document.oncontextmenu = nocontext;
     </script>
+
+    <!--=============== Vercel Web Analysis ===============-->
+    <script>
+      window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
 
     <body>
         <!--=============== HEADER ===============-->
